[package]
name = "todo"
version = "0.1.0"
authors = ["hilesh aswani <hilesh.aswani@abcdef.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
thiserror = "1.0.15"
serde = "1.0.117"
[dependencies.rustbreak]
version = "2"
features = ["ron_enc"]

